fix integration spacing being off at >991

--- a/layouts/partials/integrations/integrations.scss
+++ b/layouts/partials/integrations/integrations.scss
@@ -127,7 +127,7 @@ $ddpurple:    #774DA2;
 @media (min-width: 992px) and (max-width: 1199px) {
   .integration-tiles {
     .card {
-      margin:0 0 5px 0;
+      margin:0 0 40px 0;
     }
   }
 }
